tests/parser/bad/cmodule-transition-with.scilla
scilla_version 0

contract Test
()

(* name begins with underscore *)
transition _move ()
end
